--- a/assets/app.css
+++ b/assets/app.css
@@ -1,23 +1,98 @@
-body {
-	margin: 0;
+html {
+	font-family: 'Overpass Mono', monospace;
 }
 
-.container {
-	display: flex;
+body, ul {
+	margin: 0;
+	padding: 0;
+}
+
+body {
 	height: 100vh;
+	max-height: 100%;
 	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+body > * {
+	padding: 30px;
+}
+
+body:not(.initialized) {
 	justify-content: center;
 	align-items: center;
 }
 
+body.initialized {
+	animation: fade-out-in 1.5s linear;
+}
+
+body:not(.initialized) > *:not(header) {
+	display: none;
+}
+
+body.initialized > header {
+	width: calc(100vw - 60px);
+}
+
+nav {
+	background: #2B2B37;
+	color: #FFF;
+	width: calc(100vw - 60px);
+}
+
+body > section {
+	background: #878796;
+	flex-grow: 1;
+	width: calc(100vw - 60px);
+}
+
+
+nav > ul {
+	list-style: none;
+	font-size: 18px;
+}
+
+nav > ul > li {
+	letter-spacing: 1px;
+}
+
+footer {
+	background: #2B2B37;
+	color: #878796;
+	width: calc(100vw - 60px);
+}
+
 @media (orientation: landscape) {
-	.container > img {
+	body:not(.initialized) > header > img {
 		height: 70vh;
+	}
+	body.initialized > header > img {
+		height: 20vw;
 	}
 }
 
 @media (orientation: portrait) {
-	.container > img {
+	body:not(.initialized) > header > img {
 		width: 50vw;
 	}
+	body.initialized > header > img {
+		width: 30vw;
+	}
+	nav > ul {
+		font-size: 4vw;
+	}
+	header, nav, footer {
+		text-align: center;
+	}
+}
+
+/*
+ * Animations
+ */
+
+@keyframes fade-out-in {
+	from { opacity: 0; }
+	to { opacity: 1; }
 }
